# cookiecutter-zelos-extension

./: .gitignore  LICENSE  README.md  SUMMARY.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  config.schema.json  extension.toml  main.py  pyproject.toml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: CI.yml  release.yml
{{cookiecutter.project_name}}/scripts/: package_extension.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  extension.py
{{cookiecutter.project_name}}/tests/: test_config.py  test_extension.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py  extension.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/utils/: __init__.py
