[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "zelos-sdk>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pre-commit>=4.3.0",
    "ty>=0.0.1a0",
    "ruff>=0.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.project_slug}}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--log-cli-level=INFO"

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.ruff]
target-version = "py{{cookiecutter.python_version|replace('.', '')}}"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]
